--- a/files/InfoRetri.plist
+++ b/files/InfoRetri.plist
@@ -11,7 +11,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>https://jdyqapps.cnool.net/InfoRetri.ipa</string>
+                        <string>https://cnoolwebmaster.github.io/files/InfoRetri.ipa</string>
                     </dict>
                 </array>
                 <key>metadata</key>
